documentation/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elevok-docs
  namespace: elevok-docs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: elevok-docs
  template:
    metadata:
      labels:
        app: elevok-docs
    spec:
      containers:
        - name: elevok-container
          image: git.diktup.cloud:5050/sifca/sifca-monorepo:elevok-docs-prod-1.0.9
          #imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          #imagePullPolicy: Never
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitlab-registry-secret
