documentation/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: elevok-docs-service
  namespace: elevok-docs
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: elevok-docs
